index.js is correct
only first card anchor is altered and in stylesheet .card a

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <div class="col">Days</div>
               <div class="col">/ Day</div>
             </div>
-            <button id="book1" class="book"><a href="#receipt">Book</a></button>
+            <a id="book1" class="book" href="#receipt">Book</a>
           </div>
         </div>
         <div class="card">
@@ -263,7 +263,9 @@
             <div class="col">Days</div>
             <div class="col">Total</div>
           </div>
-          <button id="checkin" class="book">Check in</button>
+          <button id="checkin" class="book">
+            <a href="#receipt">Check in</a>
+          </button>
         </div>
       </div>
     </section>
