done with index.js

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               <div class="col">Days</div>
               <div class="col">/ Day</div>
             </div>
-            <button id="book2" class="book"><a href="#receipt">Book</a></button>
+            <a id="book2" class="book" href="#receipt">Book</a>
           </div>
         </div>
         <div class="card">
@@ -142,7 +142,7 @@
               <div class="col">Days</div>
               <div class="col">/ Day</div>
             </div>
-            <button id="book3" class="book"><a href="#receipt">Book</a></button>
+            <a id="book3" class="book" href="#receipt">Book</a>
           </div>
         </div>
         <div class="card">
@@ -174,7 +174,7 @@
               <div class="col">Days</div>
               <div class="col">/ Day</div>
             </div>
-            <button id="book4" class="book"><a href="#receipt">Book</a></button>
+            <a id="book4" class="book" href="#receipt">Book</a>
           </div>
         </div>
         <div class="card">
@@ -206,7 +206,7 @@
               <div class="col">Days</div>
               <div class="col">/ Day</div>
             </div>
-            <button id="book5" class="book"><a href="#receipt">Book</a></button>
+            <a id="book5" class="book" href="#receipt">Book</a>
           </div>
         </div>
         <div class="card">
@@ -240,7 +240,7 @@
               <div class="col">Days</div>
               <div class="col">/ Day</div>
             </div>
-            <button id="book6" class="book"><a href="#receipt">Book</a></button>
+            <a id="book6" class="book" href="#receipt">Book</a>
           </div>
         </div>
       </div>
@@ -263,9 +263,7 @@
             <div class="col">Days</div>
             <div class="col">Total</div>
           </div>
-          <button id="checkin" class="book">
-            <a href="#receipt">Check in</a>
-          </button>
+          <a id="checkin" class="book" href="#receipt">Check in</a>
         </div>
       </div>
     </section>
