basic aboutus done

--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <title>Hotel</title>
+    <title>Welcome to the Upside Down</title>
   </head>
   <body>
     <header>
       <nav>
         <ul class="navlink">
           <li>
-            <a href="#"
+            <a href="index.html"
               ><span class="fa fa-home" />&nbsp;
               <span class="navbar-items">Home</span></a
             >
           </li>
           <li>
-            <a href="#"
+            <a href="aboutus.html"
               ><span class="fa fa-info-circle" />&nbsp;
               <span class="navbar-items">About us</span></a
             >
@@ -148,7 +148,7 @@
         <div class="card">
           <div id="king" class="card-header"></div>
           <div id="card-body4" class="card-body">
-            <h3>King</h3>
+            <h3>King Size</h3>
             <div class="row-1">
               <div class="col">
                 <div class="box">
