added contact us and about us pages

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </ul>
       </nav>
       <input type="text" id="search" placeholder="search..." />
-      <a href="#"
+      <a href="contactus.html"
         ><span class="fa fa-phone-square" />&nbsp;
         <span class="navbar-items">Contact</span></a
       >
