--- a/aboutus.html
+++ b/aboutus.html
@@ -10,6 +10,7 @@
     />
     <title>About Us</title>
   </head>
+
   <body>
     <header>
       <nav>
@@ -21,24 +22,29 @@
             >
           </li>
           <li>
-            <a href="aboutus.html"
-              ><span class="fa fa-info-circle" />&nbsp;
+            <a href="aboutus.html">
+              <span class="fa fa-info-circle" />&nbsp;
               <span class="navbar-items">About us</span></a
             >
           </li>
         </ul>
       </nav>
-      <a href="#"
+      <a href="contactus.html"
         ><span class="fa fa-phone-square" />&nbsp;
         <span class="navbar-items">Contact</span></a
       >
     </header>
     <section id="aboutus">
       <div class="container">
-        <h1>About Us.</h1>
+        <h1>About Us</h1>
         <hr />
         <br />
-        Welcome to Hotel The Upside Down. <br /><br />
+        <b>
+          <u>
+            <p>Welcome to Hotel The Upside Down</p>
+          </u>
+        </b>
+        <br /><br />
         The 5-star hotel is an epitome of world-class architecture, cuisine,
         design and fashion. Its striking features and architectural details can
         awaken the senses. We here offer guests a creative atmosphere where they
@@ -52,6 +58,51 @@
         to offer a diverse gourmet experience.
       </div>
     </section>
+    <section>
+      <div class="slideshow-container">
+        <div class="fading fade">
+          <div class="numbertext">1 / 6</div>
+          <img src="images/Double_bedroom.jpg" style="width: 100%" />
+        </div>
+
+        <div class="fading fade">
+          <div class="numbertext">2 / 6</div>
+          <img src="images/kingmain.jpg" style="width: 100%" />
+        </div>
+
+        <div class="fading fade">
+          <div class="numbertext">3 / 6</div>
+          <img src="images/mini_suite.jpg" style="width: 100%" />
+        </div>
+
+        <div class="fading fade">
+          <div class="numbertext">4 / 6</div>
+          <img src="images/Single_room.jpeg" style="width: 100%" />
+        </div>
+
+        <div class="fading fade">
+          <div class="numbertext">5 / 6</div>
+          <img src="images/Suite.jpg" style="width: 100%" />
+        </div>
+
+        <div class="fading fade">
+          <div class="numbertext">6 / 6</div>
+          <img src="images/twin_bedroom.jpg" style="width: 100%" />
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div id="dots">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+      </div>
+    </section>
     <footer>Copyright &copy; 2020</footer>
+    <script src="aboutus.js"></script>
   </body>
 </html>
