--- a/contactus.html
+++ b/contactus.html
@@ -55,22 +55,24 @@
         <br />
       </div>
 
-      <table width="50%" cellspacing="0" cellpadding="1">
-        <tbody>
-          <tr>
-            <td>Toll-free number:</td>
-            <td>1-800-111-825</td>
-          </tr>
-          <tr>
-            <td>Email:</td>
-            <td><a href="#">reservations@upsidedown.com</a></td>
-          </tr>
-          <tr>
-            <td>Web:</td>
-            <td><a href="#">www.tajhotels.com</a></td>
-          </tr>
-        </tbody>
-      </table>
+      <div class="container">
+        <table width="50%" cellspacing="0" cellpadding="1">
+          <tbody>
+            <tr>
+              <td>Toll-free number:</td>
+              <td>1-800-111-825</td>
+            </tr>
+            <tr>
+              <td>Email:</td>
+              <td><a href="#">reservations@upsidedown.com</a></td>
+            </tr>
+            <tr>
+              <td>Web:</td>
+              <td><a href="#">www.tajhotels.com</a></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </section>
     <footer>Copyright &copy; 2020</footer>
   </body>
